# rustperf

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  uninstall.ps1  uninstall.sh
assets/templates/: dylint.toml  project.dylint.toml  rustperf  rustperf.cmd
assets/vscode/: rust.json
crates/machine-oriented-lints/: Cargo.toml
crates/machine-oriented-lints/src/: lib.rs
docs/: next_lints.md
install/: install.ps1  install.sh
machine-oriented-lints/: Cargo.toml
machine-oriented-lints/.cargo/: config.toml
machine-oriented-lints/src/: lib.rs
templates/: cargo-home-config.toml  crate_attributes.rs  project.dylint.toml
